--- a/Winery/Consumer/WineOrderClient/pom.xml
+++ b/Winery/Consumer/WineOrderClient/pom.xml
@@ -39,6 +39,7 @@
                 <configuration>
                     <wsdlUrls>
                         <wsdlUrl>http://localhost:8085/WineStockService?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8085/WineWarningService?wsdl</wsdlUrl>
                     </wsdlUrls>
                     <keep>true</keep>
                     <packageName>br.com.fiap.winery.stub_classes</packageName>
